--- a/src/Nobetci.Web/Views/Shared/_Layout.cshtml
+++ b/src/Nobetci.Web/Views/Shared/_Layout.cshtml
@@ -700,6 +700,7 @@
                         <ul class="footer-links">
                             <li><a href="/privacy">@(isTurkish ? "Gizlilik" : "Privacy")</a></li>
                             <li><a href="/terms">@(isTurkish ? "Şartlar" : "Terms")</a></li>
+                            <li><a href="/sitemap.xml" target="_blank">Sitemap</a></li>
                         </ul>
                     </div>
                     
